# PyWeb14

./: .gitignore  application.logs
module01/: pyproject.toml  readme.md  requirements.txt
module01/lesson01/: readme.md
module01/lesson01/D/: finish_adapter.py  start_adapter.py
module01/lesson01/I/: finish_adapter.py  start.py
module01/lesson01/L/: aggregation.py  composition.py  finish.py  readme.md  start.py
module01/lesson01/O/: data.yaml  finish.py  start.py  storage.py  storage_service.py
module01/lesson01/O/practic_example/: data.json  storage.py  storage_service.py
module01/lesson01/S/: finish.py  start.py
module01/lesson02/Behavioral/: observer.py
module01/lesson02/Behavioral/Command/: example_01.py  example_02.py  example_03.py
module01/lesson02/Behavioral/Observer/: logs.txt
module01/lesson02/Creational/: connect_to_db.py  factory.py  simple_factory.py
module01/lesson02/Creational/Factory/: example_01.py  example_02.py  example_03.py  example_04_push.py
module01/lesson02/Creational/Singleton/: connect_to_db.py  singleton.py
module01/lesson02/Structural/: decorator.py  facade.py  readme.md
module01/lesson02/Structural/Adapter/: example.py
module01/lesson02/Structural/Decorator/: example_01.py  example_02.py
module01/lesson02/Structural/Facade/: example_01.py  example_02.py
module01/lesson02/Structural/additional/: first.py  second.py
module02/lesson01/: readme.md
module02/lesson01/app_poetry/: README.rst  my_module.py  pyproject.toml
module02/lesson01/app_poetry/tests/: test_app_poetry.py
module02/lesson01/app_project/: main.py  pyproject.toml  requirements.txt
module02/lesson02/: readme.md
module02/lesson02/app_poetry/: Dockerfile  main.py  pyproject.toml  requirements.txt
module03/lesson01/: 01_thread_like_function.py  03_thread_timer.py  04_thread_lock.py  05_event_thread.py  event_observer.py  readme.md
module03/lesson02/: 01_process_as_function.py  03_process__join.py  04_process_lock_value_array.py  (+12 more)
module04/: pyproject.toml  readme.md
module04/lesson01/: app.py  simple_app.py
module04/lesson02/: app.py
module04/lesson02/chat/: server.py
module04/lesson02/chat/templates/: index.html
module04/lesson02/data/: blog.json  data.json
module04/lesson02/sockets/: server.py
module04/lesson02/templates/: blog.html
module05/: pyproject.toml  readme.md
module05/lesson01/: 01_intro.py  02_gather.py  03_create_task.py  03_fake_createtask.py  05_for_async_and_sync.py  05_future.py  06_decorator.py  06_for_await.py  08_cpu_bound.py  09_io_bound.py  10_global.py  10_sync_async.py  11_context.py  11_for_await.py  12_blocking.py  12_for_async.py  13_io_task.py  13_queue_async.py  14_cpu_task.py  14_wait.py  client.py  libs.py  main.py
module05/lesson01/old_07.02.2023/: 02_fake_gather.py  03_fake_createtask.py  04_forever.py  06_for_await.py  07_for_async.py  12_blocking.py  13_io_task.py
module05/lesson02/: 01_aiohttp_client.py  02_aiohttp_custom_session.py  03_get_exchange.py
module05/lesson02/browser-ws/: index.html  server.py
module05/lesson02/chat/: main.js  server-ws.py
module05/lesson02/chat_with_exchange/aiohttpdemo_chat/: exchange_rate.py  main.py  views.py
module05/lesson02/consumer_producer/: main.py  produce.py  server.py
module05/lesson02/sort-files/: main.py
module05/lesson02/task-runner/: main.js  task_runner.py
module05/lesson02/task-runner/files/: alabal.js  fabric-waterfall.js  image-promise.js
module06/: pyproject.toml
module07/: pyproject.toml  readme.md
module08/: pyproject.toml  readme.md
module08/lesson01/mongoengine_example/: create_records.py  delete_record.py  get_records.py  update_record.py
module08/lesson01/pymongo_example/: finish_main.py  start_main.py  test_connect.py
module08/lesson02/: cheat_sheet.md
module08/lesson02/01_simple/: consumer.py
module08/lesson02/03_pub_sub/: consumer_message.py  producer_message.py
module08/lesson02/04_celery/: app.py
module08/lesson02/redis_example/: get_set.py  redis_cache.py
module08_substitute/m14_08_02/: callback.py  main.py  pyproject.toml  redis_cache.py
module08_substitute/m14_08_02/01_helloworld/: consumer.py  producer.py
module08_substitute/m14_08_02/02_tasks/: consumer_one.py  consumer_two.py  producer.py
module08_substitute/m14_08_02/03_pub_sub/: consumer.py  producer.py
module08_substitute/m14_08_02/app/: app.py  consumer.py  models.py
module08_substitute/m14_08_02/example_celery/: app.py  my_task.py
module09/: my_spider.py  pyproject.toml  readme.md
module09/lesson_01/: data.json  example_lecture_notes.py  model.py  wars_info.py
module09/lesson_02/: authors.json  main.py  quotes.json
module09/lesson_02/war_info/: links.json  losses.json  scrapy.cfg  test.py
module09/lesson_02/war_info/war_info/: items.py  middlewares.py  pipelines.py  settings.py
module09/lesson_02/war_info/war_info/spiders/: get_links.py  losses.py
module09/m14_09_01/: main.py  pyproject.toml
module11/lesson01/: connect_db.py  main.py  models.py  pyproject.toml  sql_app.db
module11/lesson02/: pyproject.toml
module11/lesson02/migrations/versions/: 777ad16bff33_init.py
module11/lesson02/src/: schemas.py
module11/lesson02/src/database/: config.ini  models.py
module11/lesson02/src/routes/: cats.py
module12/: app.db  pyproject.toml
module12/lesson01/: example.py
module12/lesson01/app_docs/: app.py  db.py  service_auth.py
module12/lesson01/app_refresh/: app.py  auth.py  db.py
module12/lesson01/app_simple/: app.py  service_auth.py
module12/lesson02/: main.py
module12/lesson02/src/repository/: cats.py
module12/lesson02/src/routes/: owners.py
module13/lesson01/: docker-compose.yml  main.py  pyproject.toml  send-email.py
module13/lesson01/migrations/versions/: 0cac8460d2dc_add_confirmed_email.py  845f36ad69ea_add_user.py
module13/lesson01/src/: schemas.py
module13/lesson01/src/database/: config.ini  connect.py
module13/lesson01/src/repository/: users.py
module13/lesson01/src/routes/: auth.py  cats.py  owners.py
module13/lesson01/src/services/: auth.py  email.py  roles.py
(+186 files in other folders)
