[tool.poetry]
name = "module05"
version = "0.1.0"
description = ""
authors = ["Yuriy Kuchma <krabatua@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Faker = "^15.1.1"
requests = "^2.28.1"
aiohttp = "^3.8.3"
aiofile = "^3.8.1"
aiopath = "^0.6.11"
aioshutil = "^1.2"
websockets = "^10.4"
names = "^0.3.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
