[tool.poetry]
name = "m14-08-02"
version = "0.1.0"
description = ""
authors = ["Yuriy Kuchma <krabatua@gmail.com>"]
readme = "README.md"
packages = [{include = "m14_08_02"}]

[tool.poetry.dependencies]
python = "^3.10"
redis = "^5.0.0"
redis-lru = "^0.1.2"
pika = "^1.3.2"
mongoengine = "^0.27.0"
celery = "^5.3.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
