[tool.poetry]
name = "m11-02"
version = "0.1.0"
description = ""
authors = ["Yuriy Kuchma <krabatua@gmail.com>"]
readme = "README.md"
packages = [{include = "m11_02"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.91.0"
sqlalchemy = "^2.0.3"
alembic = "^1.9.3"
psycopg2 = "^2.9.5"
uvicorn = {extras = ["standart"], version = "^0.20.0"}
pydantic = {extras = ["email"], version = "^1.10.4"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
