[tool.poetry]
name = "app_project"
version = "0.1.0"
description = "API"
authors = ["Yuriy Kuchma <krabatua@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.28.1"
xmltodict = "^0.13.0"

[tool.poetry.dev-dependencies]
pytest = "^5.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
